    accessor method per attribute for all other class methods to use.  Also
    each object is once again a regular Perl blessed hashref, as it last
    was in release 1.060002, not the "inside-out" style of Class::Std.

    * For use by BUILDARGS(), en.pm has gained an additional user text
    message with key 'LKT_ARGS_BAD_PSEUDO_NAMED'.

    * Added "no warnings 'deprecated'" line to template_module_is_loaded()
    as a stop-gap measure until we replace the current test for a module
    being loaded with one that modern Perls find acceptable.

    * Removed the Perl shebang line "#!perl" from every Perl file with one.

    * The second main purpose of this release is bringing back the thorough
    (such as it was) test suite that came with Locale::KeyedText up through
    release 1.060002 and was entirely purged with release 1.06_3.

    * Increased the direct external dependency on Test::More to version
    0.92, which is the version bundled with Perl 5.10.1; updated the test
    suite to use done_testing(), that v0.88+ has, rather than plan().

    * Locale::KeyedText is now licensed under the terms of the GNU Lesser
    General Public License (LGPL) version 3 or later, rather than version
    2.1+ of the same license.  The text of the updated license is now in
    the 2 files LICENSE/LGPL and LICENSE/GPL rather than 1 file "LGPL".

    * Update AUTHOR emails from perl@ to darren@.

    * Rewrote most of the Makefile.PL (and META.yml) to make its format
    more modern, in particular by distinguishing between dependencies that
    are needed to use the Locale::KeyedText module and those needed only
    for testing it or for configuring the distribution; previously, the
    dependencies needed only for testing were treated as if necessary to
    use Locale::KeyedText itself; also added a list of "resources" urls.

    * Modernize the headings of the distribution files {Changes, README,
    TODO} and tweak the INSTALL file.  Modernize the content of the README